name: alex
version: 3.2.0
-- don't forget updating changelog.md!
license: BSD3
license-file: LICENSE
copyright: (c) Chis Dornan, Simon Marlow
author: Chris Dornan and Simon Marlow
maintainer: Simon Marlow <marlowsd@gmail.com>
bug-reports: https://github.com/simonmar/alex/issues
stability: stable
homepage: http://www.haskell.org/alex/
synopsis: Alex is a tool for generating lexical analysers in Haskell
description:
  Alex is a tool for generating lexical analysers in Haskell.
  It takes a description of tokens based on regular
  expressions and generates a Haskell module containing code
  for scanning text efficiently. It is similar to the tool
  lex or flex for C/C++.

category: Development
cabal-version: >= 1.8
build-type: Custom

extra-source-files:
        CHANGELOG.md
        README.md
        TODO
        alex.spec
        doc/Makefile
        doc/aclocal.m4
        doc/alex.1.in
        doc/alex.xml
        doc/config.mk.in
        doc/configure.ac
        doc/docbook-xml.mk
        doc/fptools.css
        examples/Makefile
        examples/Tokens.x
        examples/Tokens_gscan.x
        examples/Tokens_posn.x
        examples/examples.x
        examples/haskell.x
        examples/lit.x
        examples/pp.x
        examples/state.x
        examples/tiny.y
        examples/tkns.hs
        examples/words.x
        examples/words_monad.x
        examples/words_posn.x
        src/Parser.y
        src/Scan.hs
        src/ghc_hooks.c
        templates/GenericTemplate.hs
        templates/wrappers.hs
        tests/Makefile
        tests/simple.x
        tests/null.x
        tests/tokens.x
        tests/tokens_gscan.x
        tests/tokens_posn.x
        tests/tokens_bytestring.x
        tests/tokens_posn_bytestring.x
        tests/tokens_strict_bytestring.x
        tests/tokens_monad_bytestring.x
        tests/tokens_monadUserState_bytestring.x
        tests/tokens_bytestring_unicode.x
        tests/unicode.x

source-repository head
    type:     git
    location: https://github.com/simonmar/alex.git

flag small_base
  description: Choose the new smaller, split-up base package.

executable alex
  hs-source-dirs: src
  main-is: Main.hs

  if flag(small_base)
    build-depends: base >= 2.1, array, containers, directory
  else
    build-depends: base >= 1.0

  build-depends: base < 5
  -- build-depends: Ranged-sets
  build-depends: QuickCheck >=2

  extensions: CPP
  ghc-options: -Wall -rtsopts
  other-modules:
        AbsSyn
        CharSet
        DFA
        DFAMin
        DFS
        Info
        Map
        NFA
        Output
        Parser
        ParseMonad
        Scan
        Set
        Sort
        Util
        UTF8
        Data.Ranged
        Data.Ranged.Boundaries
        Data.Ranged.RangedSet
        Data.Ranged.Ranges

test-suite tests
  type: exitcode-stdio-1.0
  main-is: test.hs
  build-depends: base, process
